WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278961
REGRESSION(
283015@main
) Broke internal simulator builds
https://bugs.webkit.org/show_bug.cgi?id=278961
Summary
REGRESSION(283015@main) Broke internal simulator builds
Jonathan Bedard
Reported
2024-08-31 06:11:47 PDT
Build failure in Buffer.mm on all Internal simulator builds.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2024-08-31 06:12:11 PDT
rdar://135074545
Jonathan Bedard
Comment 2
2024-08-31 06:16:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32983
EWS
Comment 3
2024-08-31 06:25:14 PDT
Committed
283021@main
(e45a847d38c8): <
https://commits.webkit.org/283021@main
> Reviewed commits have been landed. Closing PR #32983 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug