REGRESSION(283015@main) Broke internal simulator builds https://bugs.webkit.org/show_bug.cgi?id=278961 rdar://135074545

Unreviewed build fix.

* Source/WebGPU/WebGPU/Buffer.mm:
(WebGPU::Buffer::unmap): Conditionalize on both macOS AND x86.

Canonical link: https://commits.webkit.org/283021@main